# rca-wagtail-2019

./: .babelrc  .babelrc.js  .coverage  .dockerignore  .env  .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .prettierrc.json  .sass-lint.yml  .stylelintrc.js  .travis.yml  Dockerfile  README.md  Vagrantfile  WAGTAIL3UPGRADE.md  browsersync.config.js  docker-compose.yml  fabfile.py  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  stellar.yaml  webpack.config.js
.circleci/: config.yml
.claude/: settings.local.json
.github/workflows/: ci.yaml  deploy-dev.yaml  deploy-production.yaml  deploy-staging.yaml  gh-pages.yaml  lint.yaml  test.yaml
cloudflare/: caching-worker.js
docker/: Dockerfile.frontend  Dockerfile.utils  Procfile  bashrc.sh  docker-compose-frontend.yml
docs/: anonymised-data.md  deployment.md  front-end-tooling.md  index.md  integrations.md  mailchimp-integration.md  personalised-ctas.md  project_conventions.md  reset_development.md  reset_staging.md  support-runbook.md  upgrading.md
docs/implementation-specs/: content-relationships.md  finalised-rebuild-approach.md  initial-rebuild-approach.md  programme-page.md
public/: robots.txt
rca/: asgi.py  routing.py  urls.py  versioning.py  wsgi.py
rca/account_management/: apps.py  forms.py  utils.py  views.py  wagtail_hooks.py
rca/account_management/tests/: test_admin.py  test_forms.py  test_utils.py  test_views.py
rca/api_content/: content.py  views.py  wagtail_hooks.py
rca/api_content/tests/: test_fetch_related_students.py  test_fetch_tagged_news_and_events.py
rca/documents/: models.py
rca/documents/migrations/: 0001_initial.py  0002_customdocument_file_size.py  0003_customdocument_file_hash.py  0004_amend_document_help_text.py  0004_amend_document_helptext.py  0005_wagtail_63_upgrade.py
rca/donate/: blocks.py  factories.py  models.py  tests.py
rca/donate/migrations/: 0001_initial.py  0002_donationformpage_form_id.py  0003_alter_donationformpage_body.py  0004_auto_20220613_1642.py  0004_wagtail_3_upgrade.py  0005_add_embed_to_richtext_in_donationformpage_further_information.py  0006_decorative_option_image_block.py  0007_video_stream_block.py
rca/editorial/: admin_forms.py  blocks.py  factories.py  models.py  serializers.py  tests.py  utils.py
rca/editorial/migrations/: 0001_initial.py  0002_add_body_field.py  0002_add_contact_fields.py  0002_adds_contact_fields.py  0002_contact_cta_model.py  0002_editorial_page_base_and_key_detail_fields.py  0002_editoriallistingpage_editoriallistingrelatededitorialpage.py  0003_add_contact_fields.py  0003_editorial_key_detail_fields_and_panels.py  0003_quote_carousel_streamfield.py  0003_taxonomy_additions.py  0004_editorial_area_taxonomy.py  0004_editoriallistingpage_editoriallistingrelatededitorialpage.py  0005_editorialpage_quote_carousel.py  0005_remove_auto_now_add.py  0005_taxonomy_additions.py  0006_alterations_to_body_field.py  0006_datetime_to_date_field.py  0006_editorialpage_quote_carousel.py  0007_alterations_to_body_field.py  0008_add_accordion_block.py  0008_add_quote_block_to_body.py  0009_add_gallery_block.py  0010_add_asset_download_fields.py  0011_add_cta_block.py  0012_relatededitorialpage.py  0013_make_type_orderable.py  0014_add_quote_block_to_body.py  0014_merge_20210723_1408.py  0015_switch_intro_to_rich_text.py  0016_adds_contact_fields.py  0016_merge_20210727_1009.py  0017_editorialpagerelatedprogramme.py  0018_add_help_text.py  0018_merge_20210727_1105.py  0019_delete_editorialpagesubjectplacement.py  0019_merge_20210728_1147.py  0020_alter_editorialpage_body.py  0020_merge_20210730_1018.py  0021_alter_editorialpage_gallery.py  (+28 more)
rca/editorial/tests/: test_api.py  test_models.py
rca/enquire_to_study/: QS.postman_collection.json  birdbath.py  factories.py  forms.py  models.py  test_forms.py  urls.py  views.py  wagtail_hooks.py
rca/enquire_to_study/migrations/: 0001_initial.py  0002_alter_meta_options.py  0002_auto_20210218_0714.py  0002_enquiry_submission.py  0003_enquiry_submission.py  0004_enquiretostudysettings.py  0004_enquiryformkeydetails.py  0004_remove_funding.py  0005_merge_20210311_1638.py  0005_replace_county_of_citizenship.py  0006_add_qs_code.py  0006_merge_20210312_1111.py  0007_add_submission_date.py  0007_merge_20210314_1919.py  (+10 more)
rca/events/: blocks.py  factories.py  filter.py  forms.py  models.py  serializers.py  tests.py  utils.py
rca/forms/: models.py
rca/guides/: factories.py  models.py  tests.py
rca/home/: blocks.py  models.py  utils.py
rca/images/: forms.py  models.py  wagtail_hooks.py
rca/landingpages/: admin_forms.py  factories.py  models.py  utils.py
rca/navigation/: models.py
rca/people/: admin_forms.py  factories.py  filter.py  formatters.py  models.py  utils.py  views.py  wagtail_hooks.py
rca/personalisation/: apps.py  blocks.py  constants.py  factories.py  models.py  wagtail_hooks.py
rca/programmes/: blocks.py  factories.py  filter.py  models.py  serializers.py  tests.py  utils.py  viewsets.py
rca/project_styleguide/: apps.py
rca/projects/: models.py  utils.py
rca/reports/: views.py  wagtail_hooks.py
rca/research/: factories.py  models.py  tests.py
rca/scholarships/: apps.py  birdbath.py  blocks.py  factories.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py  wagtail_hooks.py
rca/schools/: factories.py  models.py
rca/search/: views.py
rca/settings/: base.py  dev.py  production.py  test.py
rca/shortcourses/: access_planit.py  factories.py  models.py
rca/standardpages/: models.py
rca/users/: __init__.py  apps.py  birdbath.py  factories.py  forms.py  models.py  signals.py  viewsets.py
rca/utils/: blocks.py  cache.py  clientip.py  columns.py  context_processors.py  embed_finders.py  fields.py  filter.py  formatters.py  forms.py  mixins.py  models.py  pipeline.py  shorthand.py  views.py  wagtail_hooks.py
rca/wagtailapi/: api.py  endpoints.py  filters.py  serializers.py  views.py
vagrant/: provision.sh
(+1664 files in other folders)
