[tool.poetry]
name = "rca"
version = "0.1.0"
description = ""
authors = ["Kevin Howbrook <kevin.howbrook@torchbox.com>"]

[tool.poetry.dependencies]
python = "~3.11"
django = "~4.2"
wagtail = "~7.1"
psycopg2 = "~2.9"
gunicorn = {version = "~23.0", optional = true}

# Django packages
django-basic-auth-ip-whitelist = "~0.8"
django-birdbath = "~2.0"
django-cors-headers = "~4.7"
django-countries = "~7.6"
django-csp = "~4.0"
# If you update django-import-export, comprehensive testing of the feature should be carried out.
django-import-export = "~3.3"  # Note: v4+ has breaking changes
django-pattern-library = "~1.5"
django-phonenumber-field = {version = "~8.1", extras = ["phonenumbers"]}
django-redis = "~5.4"
django-storages = {version = "~1.14", extras = ["boto3"]}
dj-database-url = "~2.3"

# Wagtail packages
wagtail-accessibility = "~2.0"
wagtail-django-recaptcha = "~2.1"
wagtail-factories = "~4.1"
wagtail-modeladmin = "~2.2"
wagtail-orderable = {git = "https://github.com/torchbox-forks/wagtail-orderable.git", tag = "1.3.1+tbx"}
wagtail-rangefilter = "~0.2"
wagtail-storages = "~2.0"

# Various
beautifulsoup4 = "~4.13"
coverage = "~7.10"
freezegun = "~1.5"
html5lib = "~1.1"
lxml = "~5.3"
scout-apm = "~3.4"
sentry-sdk = "~2.34"
tblib = "~3.1"
urllib3 = "~2.3"
whitenoise = "~6.9"
social-auth-app-django = "~5.4"  # Release 5.5 drops support for Django 4.2
django-xff = "~1.5"
wagtailmedia = "^0.16.0"
wagtail-personalisation = {git = "https://github.com/torchbox-forks/wagtail-personalisation.git", branch = "feature/customisable-base-rules"}
wagtail-font-awesome-svg = "^2.0"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.group.dev.dependencies]
Werkzeug = "~3.1"
django-extensions = "~4.1"
fabric = "~3.2"
stellar = "~0.4"
wagtailmakeup = "~1.1"

# Linters etc.
black = "~25.1"
detect-secrets = "~1.5"
flake8 = "~7.3"
isort = "~6.0"
pre-commit = "~4.3"

# Documentation
mkdocs = "~1.6"
mkdocs-material = "~9.6"
pymdown-extensions = "~10.16"
honcho = "~2.0"
django-upgrade = "~1.25"
pyupgrade = "~3.20"

[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 88
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
    | docs
    | venv
    | node_modules
  )/
)
'''
