[tool.poetry]
name = "rca"
version = "0.1.0"
description = ""
authors = ["Kevin Howbrook <kevin.howbrook@torchbox.com>"]

[tool.poetry.dependencies]
python = "~3.13"
django = "~5.2"
wagtail = "~7.1"
psycopg2 = "~2.9"
gunicorn = {version = "~23.0", optional = true}

# Django packages
django-basic-auth-ip-whitelist = "~0.8"
django-birdbath = "~2.0"
django-cors-headers = "~4.9"
django-countries = "~8.2"
django-csp = "~4.0"
# If you update django-import-export, comprehensive testing of the feature should be carried out.
django-import-export = "~3.3"  # Note: v4+ has breaking changes
django-pattern-library = "~1.5"
django-phonenumber-field = {version = "~8.4", extras = ["phonenumbers"]}
django-redis = "~6.0"
django-storages = {version = "~1.14", extras = ["boto3"]}
dj-database-url = "~3.0"

# Wagtail packages
wagtail-accessibility = "~2.0"
wagtail-django-recaptcha = "~2.1"
wagtail-factories = "~4.3"
wagtail-modeladmin = "~2.2"
wagtail-orderable = {git = "https://github.com/torchbox-forks/wagtail-orderable.git", tag = "1.3.1+tbx"}
wagtail-rangefilter = "~0.2"
wagtail-storages = "~2.0"

# Various
beautifulsoup4 = "~4.14"
coverage = "~7.10"
freezegun = "~1.5"
html5lib = "~1.1"
lxml = "~6.0"
scout-apm = "~3.4"
sentry-sdk = "~2.39"
tblib = "~3.1"
urllib3 = "~2.5"
whitenoise = "~6.11"
social-auth-app-django = "~5.7"
django-xff = "~1.5"
wagtailmedia = "^0.16.0"
wagtail-personalisation = {git = "https://github.com/torchbox-forks/wagtail-personalisation.git", branch = "feature/customisable-base-rules"}
wagtail-font-awesome-svg = "^2.0"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.group.dev.dependencies]
Werkzeug = "~3.1"
django-extensions = "~4.1"
fabric = "~3.2"
stellar = "~0.4"
wagtailmakeup = "~1.1"

# Linters etc.
black = "~25.9"
detect-secrets = "~1.5"
flake8 = "~7.3"
isort = "~6.0"
pre-commit = "~4.3"

# Documentation
mkdocs = "~1.6"
mkdocs-material = "~9.6"
pymdown-extensions = "~10.16"
honcho = "~2.0"
django-upgrade = "~1.29"
pyupgrade = "~3.21"

[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 88
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
    | docs
    | venv
    | node_modules
  )/
)
'''
